--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     </head>
     <body>
         <h1>teste da pagina</h1>
+        aaaaaaaaaa
+
+        <img src="https://www.google.com.br/google.jpg"/>
         <link rel="stylesheet" href="style.css"/>
     </body>
 </html>
